# dummyjson-retrieving-app

./: .gitignore  Readme.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  pytest.ini
backend/app/: database.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: cart.py  dashboard.py  dashboerd.py  products.py  users.py
backend/app/core/: config.py
backend/app/crud/: base.py  cart.py  dashboard.py  product.py  user.py
backend/app/models/: __init__.py  base.py  cart.py  product.py  user.py
backend/app/schemas/: cart.py  dashboard.py  product.py  user.py
backend/app/services/: dummy_loader.py
backend/tests/: test_products.py  test_schemas.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: api.ts
frontend/src/components/: CartItem.tsx  CartSummary.tsx  Pagination.tsx  ProductCard.tsx  ProductForm.tsx  StatCards.tsx  UserCards.tsx
frontend/src/hooks/: useCart.ts  useDashboard.ts  useProduct.ts  useUsers.ts
frontend/src/pages/: DashboardPage.tsx  ProductsPage.tsx
frontend/src/utils/: format.ts
frontend/types/: base.ts  cart.ts  dashboard.ts  product.ts  user.ts
